[gd_scene load_steps=4 format=3 uid="uid://dj0vtcw3oxfku"]

[ext_resource type="TileSet" uid="uid://dltx6nii26ghv" path="res://prote_tileset.tres" id="1_fut6g"]
[ext_resource type="Script" path="res://Scripts/AttackPatterns.gd" id="1_fy7ia"]
[ext_resource type="Theme" uid="uid://dundj1k3w6wi4" path="res://resources/UI/ButtonTheme.tres" id="3_yc2ls"]

[node name="AttackPatterns" type="Node2D" node_paths=PackedStringArray("tilemap", "direction_dropdown")]
script = ExtResource("1_fy7ia")
tilemap = NodePath("TileMap")
direction_dropdown = NodePath("CanvasLayer/UI/VBoxContainer/Direction")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_fut6g")
format = 2
layer_0/tile_data = PackedInt32Array(262148, 65540, 0, 262147, 4, 0, 327682, 4, 0, 327681, 4, 0, 393216, 4, 0, 196613, 4, 0, 196614, 4, 0, 131079, 4, 0, 131080, 4, 0, 262149, 4, 0, 327686, 4, 0, 327687, 4, 0, 393224, 4, 0, 327684, 4, 0, 393220, 4, 0, 458756, 4, 0, 524292, 4, 0, 196612, 4, 0, 131076, 4, 0, 65540, 4, 0, 4, 4, 0, 196611, 4, 0, 196610, 4, 0, 131074, 4, 0, 131073, 4, 0, 65537, 4, 0, 131072, 4, 0, 131075, 4, 0, 65538, 4, 0, 3, 4, 0, 65539, 4, 0, 5, 4, 0, 65542, 4, 0, 65543, 4, 0, 131078, 4, 0, 131077, 4, 0, 65541, 4, 0, 262150, 4, 0, 262151, 4, 0, 327688, 4, 0, 262152, 4, 0, 196616, 4, 0, 196615, 4, 0, 327685, 4, 0, 393221, 4, 0, 458757, 4, 0, 458758, 4, 0, 393223, 4, 0, 393222, 4, 0, 458755, 4, 0, 458754, 4, 0, 393217, 4, 0, 393218, 4, 0, 327683, 4, 0, 393219, 4, 0, 327680, 4, 0, 262144, 4, 0, 196608, 4, 0, 196609, 4, 0, 262146, 4, 0, 262145, 4, 0)
layer_1/name = "attack_area"
layer_1/enabled = true
layer_1/modulate = Color(0.913958, 0, 0.182663, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(899, 576)
zoom = Vector2(0.5, 0.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
offset_right = 270.0
offset_bottom = 320.0
theme = ExtResource("3_yc2ls")

[node name="Direction" type="OptionButton" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2

[node name="TriangleUp" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_yc2ls")
text = "Triangle up
"

[node name="TriangleDown" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_yc2ls")
text = "Triangle down
"

[node name="Adjacent" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_yc2ls")
text = "Adjacent
"

[connection signal="item_selected" from="CanvasLayer/UI/VBoxContainer/Direction" to="." method="_on_direction_item_selected"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TriangleUp" to="." method="_on_triangle_up_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TriangleDown" to="." method="_on_triangle_down_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Adjacent" to="." method="_on_adjacent_pressed"]
